# evaluate-llm-on-korean-dataset

./: .env.sample  .gitignore  DETAILED_RESULTS.md  README.md  click_main.py  evaluate-all.ipynb  evaluate.ipynb  haerae_main.py  kill.sh  kmmlu_main.py  pyproject.toml  radar_chart_visualization.ipynb  requirements.txt  run.sh  run_all.sh  run_debug.sh
.devcontainer/: devcontainer.json
benchmarks/: __init__.py  click_main.py  haerae-vision_main.py  haerae_main.py  hrm8k_main.py  kmmlu_main.py  kobalt_main.py  kormedmcqa_main.py
config/: __init__.py  prompts.py  question_templates.py
core/: __init__.py  evaluator.py  logger.py
env/: .env-azureopenai-gpt-4o  .env-azureopenai-gpt-51  .env.azureopenai-gpt-51  .env.azureopenai-gpt-52  .env.bedrock-haiku-4-5  .env.bedrock-nova-2-lite  .env.bedrock-qwen3-next  .env.bedrock-sonnet-4  .env.bedrock-sonnet-4-5  .env.qwen3-next  .env.sonnet-4  .env.sonnet-4-5
results/: ._[KMMLU] gpt-4o-mini-240718-5shot.csv  [CLIcK] Phi-4-None.csv  [CLIcK] claude-sonnet-4-2025-12-10.csv  [CLIcK] claude-sonnet-4-5-2025-12-10.csv  [CLIcK] gpt-4.1-2025-04-14.csv  [CLIcK] gpt-4.1-mini-2025-04-14.csv  [CLIcK] gpt-4.1-nano-2025-04-14.csv  [CLIcK] gpt-4o-2025-12-11.csv  [CLIcK] gpt-5-chat-2025-08-08.csv  [CLIcK] gpt-5-mini-2025-08-08.csv  [CLIcK] gpt-5-nano-2025-08-08.csv  [CLIcK] gpt-5.1-2025-11-13.csv  [CLIcK] gpt-5.1-2025-12-11.csv  [CLIcK] gpt-5.1-chat-2025-11-13.csv  [CLIcK] gpt-5.2(medium)-2025-12-11.csv  [CLIcK] gpt-5.2-2025-12-11.csv  [CLIcK] gpt-51-medium-2025-11-13.csv  [CLIcK] gpt-oss-120b-2025-08-05.csv  [CLIcK] nova-2-lite-medium-2025-12-13.csv  [CLIcK] nova-2-pro-2025-12-11.csv  [CLIcK] nova-2-pro-medium-2025-12-11.csv  [CLIcK] qwen3-next-2025-12-10.csv  [CLIcK] qwen3-next-2025-12-11.csv  [HAERAE-VISION] claude-haiku-4-5_original.csv  [HAERAE-VISION] claude-haiku-4-5_original_scored.csv  [HAERAE-VISION] claude-haiku-4-5_original_scored_metrics.json  [HAERAE-VISION] claude-opus-4-5_original.csv  [HAERAE-VISION] claude-opus-4-5_original_scored.csv  [HAERAE-VISION] claude-opus-4-5_original_scored_metrics.json  [HAERAE-VISION] claude-sonnet-4-5_original.csv  [HAERAE-VISION] claude-sonnet-4-5_original_scored.csv  [HAERAE-VISION] claude-sonnet-4-5_original_scored_metrics.json  [HAERAE-VISION] nova-lite-v1_original.csv  [HAERAE-VISION] nova-lite-v1_original_scored.csv  [HAERAE-VISION] nova-lite-v1_original_scored_metrics.json  [HAERAE-VISION] nova-lite-v2_original.csv  [HAERAE-VISION] nova-lite-v2_original_scored.csv  [HAERAE-VISION] nova-lite-v2_original_scored_metrics.json  (+65 more)
(+5 files in other folders)
