[project]
name = "evaluate-llm-on-korean-dataset"
version = "0.1.0"
description = "Korean language proficiency evaluation for LLM/SLM models using Korean evaluation datasets"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-ai-inference>=1.0.0b9",
    "boto3>=1.40.51",
    "datasets>=4.2.0",
    "huggingface-hub>=0.31.2",
    "ipykernel>=6.29.5",
    "langchain==1.0.7",
    "langchain-aws>=0.2.35",
    "langchain-azure-ai>=0.1.4",
    "langchain-community>=0.3.31",
    "langchain-huggingface>=0.3.0",
    "langchain-openai>=0.3.35",
    "numpy>=1.26.4",
    "openai>=2.8.1",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.1",
    "regex>=2025.9.18",
    "requests>=2.32.5",
    "safetensors>=0.6.2",
    "tabulate>=0.9.0",
    "torch>=2.0.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.0",
]
